# vinyl

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  RELEASE.md  SECURITY.md  TODO.md  bun.lockb  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts  vitest.config.ts
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  deploy-preview.yml  e2e.yml  release.yml
dev-dist/: sw.js
e2e/: accessibility.spec.ts  app.spec.ts  audio-playback.spec.ts  format-support.spec.ts  navigation.spec.ts  player.spec.ts  responsive.spec.ts  settings.spec.ts  visualizer.spec.ts
e2e/fixtures/: generate-test-audio.sh
electron/: main.cjs  preload.cjs
public/: serve.json
scripts/: changelog-gen.sh  release.sh  version.sh
src/: App.tsx  index.css  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  lib.rs  main.rs
src/components/: AboutView.tsx  AddToPlaylistPopover.tsx  AudioVisualizer.tsx  BottomPlayer.tsx  CommandMenu.css  CommandMenu.test.tsx  CommandMenu.tsx  ConfirmDialog.test.tsx  ConfirmDialog.tsx  DraggableQueueList.tsx  Equalizer.tsx  ErrorBoundary.tsx  FirstLaunchWizard.tsx  GeneratorControls.tsx  ImportMusic.tsx  KeyboardShortcutsDialog.tsx  LibrarySettings.tsx  MobileNav.tsx  MusicGeneratorView.tsx  MusicInfoDialog.tsx  NowPlaying.tsx  PlayerControls.tsx  PlayerOverlay.tsx  PlaylistView.tsx  QuickPlayOverlay.tsx  (+11 more)
(+36 files in other folders)
